# refactoring-exercise

./: .gitignore  Dockerfile  README.md  _README.md  batect.yml  environment.yml  lefthook.yml  lesson-plan.md  pyproject.toml  refactoring-exercise.md  refactoring_notebooks.md  requirements.txt
.circleci/: config-reference.yml  config.yml
docs/: CI.md  cheat-sheet.md  design.md  dev-tools.md  dispensables.md  functions.md  lesson-plan.md  refactoring-exercise.md  refactoring-process.md  refactoring-video.md  setup-conda.md  setup-docker.md  todo.md  variables.md
notebooks/: getting-started-with-titanic-dataset-refactored-1.ipynb  getting-started-with-titanic-dataset-refactored-2.ipynb  getting-started-with-titanic-dataset-refactored-3.ipynb  getting-started-with-titanic-dataset-refactored-4.ipynb  getting-started-with-titanic-dataset-refactored-5.ipynb  getting-started-with-titanic-dataset-refactored-6.ipynb  getting-started-with-titanic-dataset-refactored-7-final.ipynb  getting-started-with-titanic-dataset-refactored.ipynb  getting-started-with-titanic-dataset.ipynb  submission_titanic.csv  titanic-exercise-0.ipynb  titanic-exercise-1.ipynb  titanic-exercise-2.ipynb  titanic-exercise-3.ipynb  titanic-exercise-solution.ipynb  titanic-notebook-0.ipynb  titanic-notebook-1.ipynb  titanic-notebook-1.py  titanic-notebook-2.ipynb  titanic-notebook-3.ipynb  titanic-notebook-refactoring-starter.ipynb  titanic-notebook-solution.ipynb  titanic-original.ipynb  titanic-refactored-1.ipynb  titanic-refactored-2.ipynb  titanic-refactored-3.ipynb  titanic-refactored-4.ipynb  (+3 more)
(+17 files in other folders)
