[tool.poetry]
name = "refactoring-exercise"
version = "0.1.0"
description = "A hands-on exercise for refactoring jupyter notebooks"
authors = ["David Tan <davidtan@thoughtworks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "1.5.1"
scikit-learn = "^1.2.2"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "23.1.0"
jupyter = "1.0.0"
matplotlib = "^3.7.1"
pylint = "^2.16.0"
pytest = "^7.2.0"
seaborn = "^0.12.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"